scss/modules/nav.scss
@use "sass:map";
@use "../theme";

.nav {
    line-height: 60px;

    ul {
        list-style-type: none;
        margin: 0;
        padding: 0;

        li {
            display: inline-block;

            a {
                color: map.get(theme.$nav, "link-color");
                display: block;
                outline: 0;
                padding: 0 15px;
                text-decoration: none;
            }

            &:hover {
                .dropdown {
                    display: block;
                }
            }
        }
    }

    .dropdown {
        background: map.get(theme.$header, "bg");
        border: 1px solid #eee;
        display: none;
        position: absolute;

        ul li {
            display: block;
        }
    }
}

